# flycapture2_c

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: no-hardware-ci.yml
docs/: api_coverage.md  api_mapping.md  buffer_lifetime.md  hardware_testing.md  headless_camera_readiness_6_9_1.md  migration_from_pyflycap2.md  optic_system_integration.md  optic_system_readiness_6_9_1.md  pixel_formats.md  public_api.md  recipes.md  release_checklist.md  release_evidence.md  roadmap.md  sdk_layout.md
flycapture2_c/: __init__.py
scripts/: check_ci_matrix.py  check_dll_load.py  check_release.py  diagnose_frame_rate_property.py  hardware_capability_report.py  hardware_headless_readiness_check.py  hardware_optic_system_check.py  hardware_smoke.py  inspect_sdk.py  measure_capture_rate.py  run_hardware_validation.py  sitecustomize.py
src/flycapture2_c/: __init__.py  _hardware_tools.py  api.py  bus.py  camera.py  config.py  ctypes_defs.py  dll.py  errors.py  format7.py  gige.py  hardware_report.py  image.py  metadata.py  mock.py  pixel_format.py  properties.py  strobe.py  trigger.py  typing.py
src/flycapture2_c/raw/: __init__.py  api.py  library.py  specs.py  structs.py  types.py
tests/: test_camera_lifecycle.py  test_camera_metadata.py  test_dll_loader.py  test_errors.py  test_format7_config.py  test_gige.py  test_hardware_report.py  test_hardware_smoke_cli.py  test_hardware_validation_scripts.py  test_headless_readiness_write_gating.py  test_import_no_sdk.py  test_metadata_diagnostics.py  test_mock_camera.py  test_pixel_format.py  test_pixel_format_matrix.py  test_property_system.py  test_property_write_policy.py  test_public_api_docs.py  test_raw_specs.py  test_strobe_gpio.py  test_struct_layout.py  test_trigger_control.py
tests/hardware/: conftest.py  test_hardware_capture_rate.py  test_hardware_config_write_reversible.py  test_hardware_enumerate.py  test_hardware_format7_readonly.py  test_hardware_format7_write_reversible.py  test_hardware_gige_readonly.py  test_hardware_gige_write_reversible.py  test_hardware_grab_one.py  test_hardware_grab_short_sequence.py  test_hardware_metadata_readonly.py  test_hardware_metadata_write_reversible.py  test_hardware_pixel_format_matrix.py  test_hardware_properties_readonly.py  test_hardware_properties_write_reversible.py  test_hardware_property_write_reversible.py  test_hardware_readonly_info.py  test_hardware_software_trigger.py  test_hardware_strobe_gpio_readonly.py  test_hardware_strobe_gpio_write_reversible.py  test_hardware_trigger_readonly.py  test_hardware_trigger_write_reversible.py
